--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 html {
   box-sizing: border-box;
+  height: 100%;
 }
 
 *,
@@ -8,4 +9,20 @@ html {
   box-sizing: inherit;
   padding: 0;
   margin: 0;
+}
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+#calculator {
+  width: 450px;
+  height: 550px;
+  border: 2px solid rgb(0, 0, 0);
+  border-radius: 5px;
+  box-shadow: 5px 5px;
+  padding: 20px;
 }
