--- a/style.css
+++ b/style.css
@@ -26,3 +26,14 @@ body {
   box-shadow: 5px 5px;
   padding: 20px;
 }
+
+#display {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 25%;
+  border: 2px solid rgb(0, 0, 0);
+  background-color: rgb(194, 212, 212);
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 48px;
+}
